<resources>
    <string name="app_name">B-Mart</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="girl_fashion">Girl Fashion</string>
    <string name="boy_fashion">Boy Fashion</string>
    <string name="cosmetic">Cosmetic</string>
    <string name="electronic_device">Electronic Device</string>
    <string name="others">Others</string>
    <string name="search">Search</string>
    <string name="old">Old</string>
    <string name="label_new">New</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="contact_us_msg">If you have any question and suggestion about my application, please contact us B.Mart@gmail.com at any time. We can\'t wait to share about our excellent services with you. Thanks for choosing us!</string>
    <string name="copyright_2020">Copyright © 2020</string>
    <string name="all_rights_reserved_by_b_mart">All rights reserved by B.Mart</string>
    <string name="all">All</string>
    <string name="add_gps_location">Add GPS location</string>
    <string name="title_activity_maps">Map</string>
    <string name="status">Status</string>
    <string name="new_">New</string>
    <string name="top_category">Top Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="update">Update</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="block_acc_and_delete_posts_warning_msg">Block %1$s account and delete all of the posts related to that account.</string>
    <string name="acc_is_blocked">%1$s acc is blocked!</string>
    <string name="warning">Warning</string>
    <string name="feedback">Feedback</string>
    <string name="leave_product_feedback_or_share_your_ideas">Leave product feedback or share your ideas</string>
    <string name="add_screen_shot_here">Add screen shot here</string>

    <string-array name="navigation_drawer_items_array">
        <item>Home</item>
        <item>Profile</item>
        <item>User List</item>
        <item>Favourite</item>
        <item>Shopping</item>
        <item>Contact Us</item>
        <item>Logout</item>
    </string-array>

    <string-array name="category_array">
        <item>@string/girl_fashion</item>
        <item>@string/boy_fashion</item>
        <item>@string/cosmetic</item>
        <item>@string/electronic_device</item>
        <item>@string/others</item>
    </string-array>

    <string-array name="girl_fashion_sub_categories">
        <item>@string/all</item>
        <item>Trouser/Shirt</item>
        <item>T-shirt/Blouse/Dress</item>
        <item>Traditional Costume</item>
        <item>Accessory</item>
        <item>Foot Ware</item>
    </string-array>

    <string-array name="boy_fashion_sub_categories">
        <item>@string/all</item>
        <item>Trouser</item>
        <item>T-shirt</item>
        <item>Traditional Costume</item>
        <item>Accessory</item>
        <item>Foot Ware</item>
    </string-array>

    <string-array name="electronic_device_sub_categories">
        <item>@string/all</item>
        <item>Mobile Phone</item>
        <item>Laptop</item>
        <item>Motorbikes</item>
    </string-array>

    <string-array name="cosmetic_sub_categories">
        <item>@string/all</item>
        <item>Girl Cosmetic</item>
        <item>Men Cosmetic</item>
    </string-array>

    <string-array name="others_sub_categories">
        <item>@string/all</item>
    </string-array>
</resources>
