<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.FeedbackEditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:padding="16dp"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp" />

        <TextView
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/feedback" />

        <ImageView
            android:id="@+id/img_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:padding="16dp"
            android:src="@drawable/ic_send_black_24dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_screen_shot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_screen_shot"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_landscape_black_24dp" />

        <TextView
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingHorizontal="16dp"
            android:text="@string/add_screen_shot_here" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="#20000000" />

    <EditText
        android:id="@+id/edt_feedback"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/leave_product_feedback_or_share_your_ideas"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp" />

</LinearLayout>
